--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,16 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 name: compile
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-#  push:
-#    branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  release:
+    types: [published]  # Trigger the workflow when a release is published
+  workflow_dispatch:  # Optional, to allow manual triggering if needed
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
